# AI-stuff

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  THE_PATH.md  gunicorn.conf.py  pyproject.toml  pytest.ini  railway.toml  seed.py  test_audit.py  test_bugfixes.py  test_compression.py
.github/workflows/: tests.yml
cli/: __init__.py  commands.py
config/: __init__.py  settings.py
core/: errors.py
core/ace/: __init__.py  critic.py  editor.py  engine.py  executor.py  pipeline.py  planner.py  quality_gates.py  tools.py
core/content/: __init__.py  generator.py  templates.py
core/directives/: __init__.py  intake.py  manager.py  pipeline.py  waves.py
core/evolution/: __init__.py  cycle.py  executor.py  prompt_evolution.py  proposer.py  reviewer.py
core/knowledge/: __init__.py  bridge.py  entities.py  graph.py  maintenance.py  quality.py  query.py  resolution.py  search.py
core/lieutenant/: __init__.py  base.py  manager.py  persona.py  registry.py  workload.py
core/mcp/: client.py  manager.py
core/memory/: __init__.py  bitemporal.py  compression.py  consolidation.py  design.py  embeddings.py  episodic.py  experiential.py  manager.py  semantic.py
core/replication/: __init__.py  bridge.py  generator.py  registry.py
core/research/: autoresearcher.py  cross_synthesis.py  deep.py  deepening.py  enrichment.py  pipeline.py  questions.py  strategy.py
core/retry/: __init__.py  ralph_wiggum.py
core/routing/: __init__.py  budget.py  pricing.py
core/scheduler/: __init__.py  daemon.py  health.py  jobs.py
core/search/: __init__.py  cache.py  credibility.py  feeds.py  github.py  hackernews.py  huggingface.py  papers_with_code.py  reddit.py  scraper.py  semantic_scholar.py  sweep.py  tavily.py  web.py
core/validation/: ground_truth.py
core/vector/: store.py
core/warroom/: __init__.py  debate.py  debate_strategies.py  retrospective.py  session.py  synthesis.py
db/: __init__.py  engine.py  migrations.py  models.py
db/repositories/: __init__.py  base.py  directive.py  empire.py  evolution.py  facts.py  knowledge.py  lieutenant.py  memory.py  task.py
llm/: __init__.py  anthropic.py  base.py  cache.py  openai.py  router.py  schemas.py
scripts/: auto_commit.sh
tests/: benchmark.py  benchmark_knowledge.py
tests/h/: conftest.py
tests/integration/: test_memory_compression_native.py  test_system_audit_native.py  test_system_integration.py
tests/unit/: test_ace_escalation.py  test_empire_route.py  test_god_panel_command.py  test_knowledge_performance.py  test_llm_template_method.py  test_safe_json_loads.py  test_scheduler_registration.py  test_task_routing.py
utils/: __init__.py  circuit_breaker.py  crypto.py  events.py  logging.py  metrics.py  text.py  validators.py
web/: __init__.py  app.py
web/middleware/: __init__.py  auth.py  rate_limit.py
web/routes/: api.py  budget.py  dashboard.py  directives.py  evolution.py  god_panel.py  knowledge.py  lieutenants.py  mcp.py  memory.py  replication.py  scheduler.py  settings.py  warrooms.py
web/templates/: base.html  dashboard.html  god_panel.html  login.html
web/templates/budget/: overview.html
web/templates/directives/: detail.html  list.html
web/templates/evolution/: overview.html  proposals.html
web/templates/knowledge/: entities.html  entity.html  overview.html
web/templates/lieutenants/: detail.html  list.html
web/templates/memory/: overview.html  search.html
web/templates/replication/: network.html
web/templates/scheduler/: overview.html
web/templates/settings/: index.html
web/templates/warrooms/: detail.html  list.html
